<resources>
    <string name="app_name">Vakcinacija - Stefan &amp; Filip</string>
    <string name="provjera_bolesti">Ukoliko bolujete od neke bolesti, u polje iznad navedite koja je bolest u pitanju. Ukoliko ne bolujete od neke bolesti, ostavite polje prazno.</string>
    <string name="bolest">Bolujem od...</string>
    <string name="da_li_bolujete">Da li bolujete od neke bolesti?</string>
    <string name="btn_provjera_bolesti">Nastavi ka vakcinaciji</string>
    <string name="prioritetna_grupa_naslov">Da li pripadate nekoj od prioritetnih grupa?</string>
    <string name="prioritetna_grupa_objasnjenje">Ukoliko pripadate nekoj od prioritetnih grupa, označite kojoj. Ukoliko ne pripadate niti jednoj od ponuđenih grupa, označite polje "Ne pripadam".</string>
    <string name="prioritetna_grupa_btn">NASTAVI DALJE</string>
    <string name="prioritetna_grupa_ch_bx1">Hronični bolesnici</string>
    <string name="prioritetna_grupa_ch_bx2">Medicinski radnici</string>
    <string name="prioritetna_grupa_ch_bx3">Boravak u staračkom domu</string>
    <string name="prioritetna_grupa_ch_bx4">Ne pripadam </string>
    <string name="sazetak_naslov">Osnovne informacije o korisniku</string>
    <string name="imePrezime">Ime i prezime:</string>
    <string name="datum">Datum rođenja:</string>
    <string name="grad">Grad:</string>
    <string name="ulica">Ulica stanovanja:</string>
    <string name="bolestKonacno">Boluje od:</string>
    <string name="grupa">Prioritetna grupa:</string>
    <string name="prazno">/</string>
    <string name="naslov_broja_ljudi">Prijavljenih za vakcinaciju: </string>
    <string name="brojac">812 </string>
    <string name="lokacija_vakcinacije">Lokacija vakcinacije: </string>
    <string name="vrijeme_vakcinacije">Vrijeme vakcinacije: </string>
    <string name="statisticki_prikaz">Statistički prikaz izbora vakcine </string>
    <string name="izborVakcine">Želim da se vakcinišem jednom od ponuđenih vakcina:  </string>
    <string name="straniDrzavljanin">Vakcinacija trenutno nije moguća za strane državljane.  </string>
    <string name="straniDrzavljaninBTN">POVRATAK NAZAD </string>
    <string name="vakcinacijaObjasnjenje"> Molimo Vas da unesete osnovne informacije potrebne za vakcinaciju. Informacije se neće zloupotrebljavati te će se isključivo koristiti za arhiviranje vakcinisanih te zdravstvene papire. </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>