<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProvjeraKorisnika">

    <TextView
        android:id="@+id/objasnjenje_bolovanje"
        android:layout_width="331dp"
        android:layout_height="118dp"
        android:fontFamily="@font/asap"
        android:gravity="center"
        android:text="@string/provjera_bolesti"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bolujem_od"
        app:layout_constraintVertical_bias="0.189" />

    <EditText
        android:id="@+id/bolujem_od"
        android:layout_width="320dp"
        android:layout_height="59dp"
        android:ems="10"
        android:fontFamily="@font/asap"
        android:inputType="textPersonName"
        android:text="@string/bolest"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/naslov_da_li_bolujete"
        app:layout_constraintVertical_bias="0.095" />

    <TextView
        android:id="@+id/naslov_da_li_bolujete"
        android:layout_width="379dp"
        android:layout_height="213dp"
        android:fontFamily="@font/asap"
        android:gravity="center"
        android:text="@string/da_li_bolujete"
        android:textColor="@color/teal_700"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />

    <Button
        android:id="@+id/bolovanje_submit"
        android:layout_width="420dp"
        android:layout_height="75dp"
        android:text="@string/btn_provjera_bolesti"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/objasnjenje_bolovanje" />
</androidx.constraintlayout.widget.ConstraintLayout>