<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/gradient"
    android:layout_height="match_parent"
    tools:context=".SazetakPrethodnihOdgovora">

    <TextView
        android:id="@+id/sazetak_naslov"
        android:layout_width="393dp"
        android:layout_height="108dp"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:gravity="center"
        android:text="@string/sazetak_naslov"
        android:textColor="@color/teal_700"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="46dp"
        android:layout_height="41dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sazetak_naslov"
        app:srcCompat="@drawable/ic_baseline_person_24" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="46dp"
        android:layout_height="41dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="12dp"
        android:tint="@color/teal_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10"
        app:srcCompat="@drawable/ic_baseline_medical_services_24" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="46dp"
        android:layout_height="41dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="12dp"
        android:tint="@color/teal_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11"
        app:srcCompat="@drawable/ic_city" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="46dp"
        android:layout_height="41dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:srcCompat="@drawable/ic_baseline_location_on_24" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="46dp"
        android:layout_height="41dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:srcCompat="@drawable/ic_baseline_featured_play_list_24" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="46dp"
        android:layout_height="41dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="12dp"
        android:tint="@color/teal_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:srcCompat="@drawable/ic_baseline_people_24" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="@string/prioritetna_grupa_btn"
        android:fontFamily="@font/asap"
        android:gravity="center"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/imePrezime"
        android:layout_width="100dp"
        android:layout_height="41dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/asap"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:text="@string/imePrezime"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/sazetak_naslov" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="175dp"
        android:layout_height="41dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/asap"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imePrezime"
        app:layout_constraintTop_toBottomOf="@+id/sazetak_naslov" />

    <TextView
        android:id="@+id/datumRodj"
        android:layout_width="100dp"
        android:layout_height="41dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/asap"
        android:gravity="center_vertical"
        android:text="@string/datum"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageView11"
        app:layout_constraintTop_toBottomOf="@+id/imePrezime" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="175dp"
        android:layout_height="41dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/asap"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/datumRodj"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/grad"
        android:layout_width="100dp"
        android:layout_height="41dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/asap"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:text="@string/grad"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/datumRodj" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="175dp"
        android:layout_height="41dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/asap"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/grad"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/ulica"
        android:layout_width="100dp"
        android:layout_height="41dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/asap"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:text="@string/ulica"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageView10"
        app:layout_constraintTop_toBottomOf="@+id/grad" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="175dp"
        android:layout_height="41dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/asap"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/ulica"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/bolest"
        android:layout_width="100dp"
        android:layout_height="41dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/asap"
        android:gravity="center_vertical"
        android:text="@string/bolestKonacno"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/ulica" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="175dp"
        android:layout_height="41dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/asap"
        android:gravity="center_vertical"
        android:text="@string/prazno"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/bolest"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/grupa"
        android:layout_width="100dp"
        android:layout_height="41dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/asap"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:text="@string/grupa"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toBottomOf="@+id/bolest" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="175dp"
        android:layout_height="41dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/asap"
        android:gravity="center_vertical"
        android:text="@string/prazno"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/grupa"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />
</androidx.constraintlayout.widget.ConstraintLayout>