<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".BolestActivity">

    <EditText
        android:id="@+id/bolujem_od"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:ems="10"
        android:fontFamily="@font/asap"
        android:inputType="textPersonName"
        android:text="@string/bolest"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/naslov_da_li_bolujete" />

    <TextView
        android:id="@+id/objasnjenje_bolovanje"
        android:layout_width="323dp"
        android:layout_height="86dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:fontFamily="@font/asap"
        android:gravity="left"
        android:text="@string/provjera_bolesti"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bolujem_od" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="46dp"
        android:layout_height="41dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toStartOf="@+id/bolujem_od"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/naslov_da_li_bolujete"
        app:srcCompat="@drawable/ic_baseline_medical_services_24" />

    <TextView
        android:id="@+id/naslov_da_li_bolujete"
        android:layout_width="375dp"
        android:layout_height="167dp"
        android:layout_marginTop="132dp"
        android:fontFamily="@font/asap"
        android:gravity="center"
        android:text="@string/da_li_bolujete"
        android:textColor="@color/teal_700"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bolovanje_submit"
        android:layout_width="413dp"
        android:layout_height="112dp"
        android:fontFamily="@font/asap"
        android:text="NASTAVAK"
        android:textSize="23sp"
        app:backgroundTint="@color/btn_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/objasnjenje_bolovanje"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>